<resources>
    <string name="app_name">Unmapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="iniciar">Inicio</string>
    <string name="menu_pve">PVE</string>
    <string name="menu">Menú</string>
    <string name="menu_pvp">PVP</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_caos">Caos</string>
    <string name="menu_players">Jugadores</string>
    <string name="menu_equipos">Equipos</string>
    <string name="menu_tier">Tier</string>

    <string name="settings_personajes">Personajes</string>
    <string name="settings_sets">Sets</string>


</resources>