<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pve"
            android:icon="@drawable/pve"
            android:title="@string/menu_pve" />
        <item
            android:id="@+id/nav_pvp"
            android:icon="@drawable/pvp"
            android:title="@string/menu_pvp" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_caos"
            android:icon="@drawable/settings"
            android:title="Caos" />
    </group>
</menu>