<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="204dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/menu_equipos"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/etJugadoresPVP"
        app:layout_constraintTop_toBottomOf="@+id/etJugadoresPVP" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/menu_players"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bPVP"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/etJugadoresPVP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Switch
        android:id="@+id/sEquiposPVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Switch
        android:id="@+id/sTiersPvp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/etJugadoresPVP"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="204dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/menu_tier"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>